--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
         pip install -r requirements.txt
         pip install pytest
 
+    - name: Run flake8 linter
+      run: |
+        flake8 src tests
+
     - name: Run tests
       run: |
         pytest -v tests
