--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+flake8==7.2.0
 iniconfig==2.1.0
+mccabe==0.7.0
 numpy==2.2.6
 packaging==25.0
 pandas==2.2.3
 pluggy==1.6.0
+pycodestyle==2.13.0
+pyflakes==3.3.2
 Pygments==2.19.1
 pytest==8.4.0
 python-dateutil==2.9.0.post0
